syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message AccidentData {
  string username = 1;
  string car_id = 2;
  google.protobuf.Timestamp time = 3;
  double latitude = 4;
  double longitude = 5;
}

message CreateAccidentDataResponse { string accident_id = 1; }

message GetAllAccidentDataResponse { repeated AccidentData accidents = 1; }

message GetHourlyAccidentOfCurrentDayRequest { int32 hour = 1; }

message GetHourlyAccidentOfCurrentDayResponse {
  repeated AccidentData accidents = 1;
}

service AccidentService {
  rpc CreateAccidentData(AccidentData) returns (CreateAccidentDataResponse) {}
  rpc GetAllAccidentData(google.protobuf.Empty)
      returns (GetAllAccidentDataResponse) {}
  rpc GetHourlyAccidentOfCurrentDay(GetHourlyAccidentOfCurrentDayRequest)
      returns (GetHourlyAccidentOfCurrentDayResponse) {}
}