syntax = "proto3";
package proto;
option go_package = ".;proto";

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

message RegisterNewCarRequest {
  string car_detail = 1;
  string vehicle_registration_number = 2;
}

message RegisterNewCarResponse { string car_id = 1; }

service CarService {
  rpc RegisterNewCar(RegisterNewCarRequest) returns (RegisterNewCarResponse) {}
}